--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,25 +6,33 @@ html{
 	background-repeat: no-repeat;
 }
 
-
-body{
+p{
 	color: #202020;
 	font-family: 'Pompiere', cursive;
-	font-family: 'New Rocker', cursive;
-
-	
 }
 
+body{
+	font-family: 'New Rocker', cursive;
+	font-size: 16pt;
+}
+
+h1{
+	font-family: 'New Rocker', cursive;
+	font-size: 50pt;
+	color: #250000;
+
+}
 #list{
 	background-image: url('images/scroll.png');
-	background-size: cover;
+	background-size: 100% 100%;
 	padding: 5%;
 	display: inline-block;
 
+
 }
 td {
-    padding-top: 12%;
-    padding-bottom: 10%;
+    padding-top: 7%;
+    padding-bottom: 7%;
     padding-left: 7%;
     padding-right: 7%;
     text-align: left;
@@ -33,12 +41,13 @@ td {
 
 #imagegrid{
 	background-image: url('Test images/map.jpg');
-	background-size: cover;
+	background-size: 100% 100%;
 	width: 60%;
 	float: right;
 	padding: 2%;
 	display: inline-block;
 	max-width: 500px;
+	margin-right: 5%;
 
 
 }
