--- a/style.css
+++ b/style.css
@@ -1,19 +1,45 @@
 @charset "utf-8";
 /* CSS Document */
 
-#div1{text-align:center;
-      font-size:30px;
+/** Font stacks and background */
+html{
+	
+	background-image: url('images/background.jpg');
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+p{
+	color: #202020;
+	font-family: 'Pompiere', cursive;
+}
+h1{
+	font-family: 'New Rocker', cursive;
+	font-size: 50pt;
+	color: #250000;
+}
+h2{
+	font-family: 'Pompiere', cursive;
+	font-size: 30pt;
+	font-weight: bold;
+}
+a{
+	font-family: 'Pompiere', cursive;
+	font-weight: bold;
+	font-size: 20pt;
+}
+
+
+#div1{
 	  margin-bottom:10px;
 	  margin-top:10px; 
 }
-
-.container{width:85%;}
 
 .container {
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
+    width:85%;
 }
 
 .menu-grids{
@@ -25,8 +51,7 @@
 div{font-size:20px;
 	text-align:center;
 	margin:auto;
-	font-family:"Times New Roman", Times, serif;
-	background-color:#FFF;
+	
 }
 
 div ul{list-style-type:none;
@@ -81,10 +106,10 @@ div ul li a,visited{color:#000;
 }
 
 .guanbi{
-	background-image:url(popup_guanbi.png));
+	background-image:url(images/popup_guanbi.png));
 }
 .close{
-	background-image:url(popup_guanbi.png));
+	background-image:url(images/popup_guanbi.png));
 }
 
 .popup .top_nav{
@@ -106,13 +131,13 @@ div ul li a,visited{color:#000;
 
 
 
-.popup .top_nav span{font:18px/18px 'microsoft yahei';color:#707070;display:block;position:absolute;top:13px;left:50px;}
+.popup .top_nav span{color:#707070;display:block;position:absolute;top:13px;left:50px;}
 
-.popfoot .ftop_nav span{font:18px/18px 'microsoft yahei';color:#707070;display:block;position:absolute;top:13px;left:50px;}
+.popfoot .ftop_nav span{color:#707070;display:block;position:absolute;top:13px;left:50px;}
 
-.popfoot .ftop_nav a.close{ width:35px; height: 35px; background:url(popup_guanbi.png) repeat 0px 0px;display: block; position:absolute;top:8px;right:10px;cursor:pointer;}
+.popfoot .ftop_nav a.close{ width:35px; height: 35px; background:url(images/popup_guanbi.png) repeat 0px 0px;display: block; position:absolute;top:8px;right:10px;cursor:pointer;}
 
-.popup .top_nav a.guanbi { width:35px; height: 35px; background:url(popup_guanbi.png) repeat 0px 0px;display: block; position:absolute;top:8px;right:10px;cursor:pointer;}
+.popup .top_nav a.guanbi { width:35px; height: 35px; background:url(images/popup_guanbi.png) repeat 0px 0px;display: block; position:absolute;top:8px;right:10px;cursor:pointer;}
 
 .popup .top_nav a.guanbi span { display: none;}
 
@@ -137,13 +162,12 @@ div ul li a,visited{color:#000;
 
 
 .tc_login .center .h2 .h3 .h4 .h5{font-size:20px;color:#090;text-align:center;margin:15px 0 0px 0;}
-.tc_login .center a{font:13px/18px 'microsoft yahei';color:#666;float:right;margin:16px 0 0px 6px;}
+.tc_login .center a{color:#666;float:right;margin:16px 0 0px 6px;}
 .tc_login .center a:hover{color:#06F;text-decoration: underline;}
 .tc_login .center input{
     border: 1px solid #ccc;
     border-radius: 2px;
     color: #000;
-    font-family: 'Open Sans', sans-serif;
     font-size: 1em;
     height: 40px;
     padding:0 0 0 34px;
@@ -166,7 +190,6 @@ div ul li a,visited{color:#000;
     color: #fff;
     cursor: pointer;
     height: 50px;
-    font-family: 'Open Sans', sans-serif;
     font-size: 1.2em;
     letter-spacing: 0.05em;
     text-align: center;
@@ -194,6 +217,7 @@ h1{
 	left: 20px;
 	font-size: 30px;
 	margin-left: 50px;
+	font-family: 'Pompiere', cursive;
 }
 #leaderboard{
 	position: absolute;
@@ -201,5 +225,6 @@ h1{
 	right: 20px;
 	font-size: 30px;
 	margin-right: 50px;
+	font-family: 'Pompiere', cursive;
 }
 
