--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ p{
 body{
 	font-family: 'New Rocker', cursive;
 	font-size: 16pt;
+	min-width: 1100px;
 }
 
 h1{
@@ -59,4 +60,8 @@ td {
     height: 100px;
     padding: 10px;
 
+}
+.tick{
+	width: 16pt;
+	height: 16pt;
 }
