--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,6 +28,7 @@ h1{
 	background-size: 100% 100%;
 	padding: 5%;
 	display: inline-block;
+	margin:2% 10% 0 5%; 
 
 
 }
@@ -44,11 +45,11 @@ td {
 	background-image: url('Test images/map.jpg');
 	background-size: 100% 100%;
 	width: 60%;
-	float: right;
 	padding: 2%;
 	display: inline-block;
 	max-width: 500px;
-	margin-right: 5%;
+
+
 
 
 }
