--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ p{
 body{
 	font-family: 'New Rocker', cursive;
 	font-size: 16pt;
-	min-width: 1100px;
+	min-width: 1200px;
 }
 
 h1{
@@ -33,10 +33,7 @@ h1{
 
 }
 td {
-    padding-top: 7%;
-    padding-bottom: 7%;
-    padding-left: 7%;
-    padding-right: 7%;
+    padding: 6%;
     text-align: left;
  
 }
