--- a/style.css
+++ b/style.css
@@ -77,6 +77,25 @@ div ul li a,visited{color:#000;
 
 #gray{width:100%;height:100%;background:rgba(0,0,0,0.3);position:fixed;top:0px;display:none;z-index:99;}
 
+
+
+.tc{
+	text-decoration: none;
+	color: black;
+
+}
+.ac{
+	position: absolute;
+	bottom: 20px;
+	right: 20px;
+	font-size: 30px;
+	margin-right: 50px;
+	text-decoration: none;
+	color: black;
+	background-color: white;
+	padding: 5px 10px 5px 10px;
+	opacity: 0.7;
+}
 .popup{
 	width:532px; 
 	height:auto;
@@ -151,14 +170,7 @@ div ul li a,visited{color:#000;
 
 .tc_login .center{width:532px;height:380px; float:left;}
 
-.tc_login .center h2{width:532px;height:50px;margin:20px 0 20px 0;font-size:30px;color:#666;text-align:center;}
-
-.tc_login .center h3{width:532px;height:50px;margin:20px 0 20px 0;font-size:30px;color:#666;text-align:center;}
-
-.tc_login .center h4{width:532px;height:50px;margin:20px 0 20px 0;font-size:30px;color:#666;text-align:center;}
-
-.tc_login .center h5{width:532px;height:50px;margin:20px 0 20px 0;font-size:30px;color:#666;text-align:center;}
-
+.tc_login .center h2, h3, h4, h5{width:532px;height:50px;margin:20px 0 20px 0;font-size:30px;color:#666;text-align:center;}
 
 
 .tc_login .center .h2 .h3 .h4 .h5{font-size:20px;color:#090;text-align:center;margin:15px 0 0px 0;}
@@ -171,7 +183,7 @@ div ul li a,visited{color:#000;
     font-size: 1em;
     height: 40px;
     padding:0 0 0 34px;
-	margin:10px 0px 0px 10px;
+	margin:15% 0px 0px 0px;
     transition: background 0.3s ease-in-out;
     width: 220px;
 	float:right;
