--- a/style.css
+++ b/style.css
@@ -230,6 +230,11 @@ h1{
 	font-size: 30px;
 	margin-left: 50px;
 	font-family: 'Pompiere', cursive;
+	text-decoration: none;
+	color: black;
+	background-color: white;
+	padding: 5px 10px 5px 10px;
+	opacity: 0.7;
 }
 #leaderboard{
 	position: absolute;
@@ -238,5 +243,19 @@ h1{
 	font-size: 30px;
 	margin-right: 50px;
 	font-family: 'Pompiere', cursive;
+	text-decoration: none;
+	color: black;
+	background-color: white;
+	padding: 5px 10px 5px 10px;
+	opacity: 0.7;
 }
+.leaderboard1{
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	font-family: 'Pompiere', cursive;
+	font-size: 30pt;
+	font-weight: bold;
+}
+
 
