--- a/stylesheet.css
+++ b/stylesheet.css
@@ -29,19 +29,24 @@ h1{
 	padding: 5%;
 	display: inline-block;
 	margin:2% 10% 3% 5%; 
+	font-family:  'Pompiere', cursive;
 
 
 }
 td {
     padding: 6%;
     text-align: left;
+
  
+}
+table{
+	max-width: 30%;
 }
 
 #imagegrid{
 	background-image: url('Test images/map.jpg');
 	background-size: 100% 100%;
-	width: 60%;
+	
 	padding: 2%;
 	display: inline-block;
 	max-width: 500px;
