--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 /** Background image */
 html{
-	
+
 	background-image: url('images/background.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -28,7 +28,7 @@ h1{
 	background-size: 100% 100%;
 	padding: 5%;
 	display: inline-block;
-	margin:2% 10% 3% 5%; 
+	margin:2% 10% 3% 5%;
 	font-family:  'Pompiere', cursive;
 
 
@@ -37,7 +37,7 @@ td {
     padding: 6%;
     text-align: left;
 
- 
+
 }
 table{
 	max-width: 30%;
@@ -46,24 +46,25 @@ table{
 #imagegrid{
 	background-image: url('Test images/map.jpg');
 	background-size: 100% 100%;
-	
+
 	padding: 2%;
 	display: inline-block;
 	max-width: 500px;
 	margin-bottom: 3%;
-
-
-
-
 }
-.grid{
 
+.grid{
 	display: inline-block;
     float: left;
     width: 100px;
     height: 100px;
-    padding: 10px;
+    margin: 10px;
+}
 
+.over {
+  -webkit-box-shadow: 2px 2px 25px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 2px 2px 25px 0px rgba(0,0,0,0.75);
+  box-shadow: 2px 2px 25px 0px rgba(0,0,0,0.75);
 }
 .tick{
 	width: 16pt;
