--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,10 @@ h1{
 
 
 }
+tr{
+	padding: 5%;
+
+}
 td {
     padding: 6%;
     text-align: left;
@@ -41,12 +45,14 @@ td {
 }
 table{
 	max-width: 30%;
+
 }
 
+
 #imagegrid{
+	
 	background-image: url('Test images/map.jpg');
 	background-size: 100% 100%;
-
 	padding: 2%;
 	display: inline-block;
 	max-width: 500px;
@@ -59,6 +65,7 @@ table{
     width: 100px;
     height: 100px;
     margin: 10px;
+    border: 2px solid white;
 }
 
 .over {
