--- a/style/game.css
+++ b/style/game.css
@@ -1,7 +1,7 @@
 /** Background image */
 html{
 
-	background-image: url('images/background.jpg');
+	background-image: url('../images/background.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 }
@@ -24,7 +24,7 @@ h1{
 
 }
 #list{
-	background-image: url('images/scroll.png');
+	background-image: url('../images/scroll.png');
 	background-size: 100% 100%;
 	padding: 5%;
 	display: inline-block;
@@ -50,7 +50,7 @@ table{
 
 #imagegrid{
 	
-	background-image: url('Test images/map.jpg');
+	background-image: url('../images/map.jpg');
 	background-size: 100% 100%;
 	padding: 2%;
 	display: inline-block;
