--- a/style/style.css
+++ b/style/style.css
@@ -33,13 +33,17 @@ a{
 	  margin-bottom:10px;
 	  margin-top:10px; 
 }
-
+.login{
+	float: right;
+	padding-right: 5%;
+	width: 40%;
+	vertical-align: middle;
+}
 .container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    width:85%;
+    width: 40%;
+    padding-left: 5%;
+    float:left;
+  
 }
 
 select{
@@ -61,7 +65,7 @@ select{
 	
 div{font-size:20px;
 	text-align:center;
-	margin:auto;
+	
 	
 }
 
@@ -97,7 +101,7 @@ div ul li a,visited{color:#000;
 }
 .ac{
 	position: absolute;
-	bottom: 20px;
+	top: 50px;
 	right: 20px;
 	font-size: 30px;
 	margin-right: 50px;
@@ -191,7 +195,7 @@ div ul li a,visited{color:#000;
     font-size: 1em;
     height: 40px;
     padding:0 0 0 34px;
-	margin:15% 0px 0px 0px;
+	
     transition: background 0.3s ease-in-out;
     width: 220px;
 	float:right;
