--- a/style/newStyle.css
+++ b/style/newStyle.css
@@ -174,7 +174,7 @@ div ul li a,visited{color:#000;
 
 .popup .min{width:532px;height:auto;}
 
-#fm_login{width:532px;height:360px;}
+#customGame{width:532px;height:360px;}
 
 #fm_div{{width:532px;height:360px;}}
 
