--- a/style/newStyle.css
+++ b/style/newStyle.css
@@ -176,7 +176,7 @@ div ul li a,visited{color:#000;
 
 #customGame{width:532px;height:360px;}
 
-#fm_div{{width:532px;height:360px;}}
+#customGame_div{{width:532px;height:360px;}}
 
 .tc_login{width:532px;height:380px;}
 
