--- a/style/newStyle.css
+++ b/style/newStyle.css
@@ -267,3 +267,22 @@ div ul li a,visited{color:#000;
 	font-size: 30pt;
 	font-weight: bold;
 }
+
+.endGame{
+	overflow: hidden;
+	position: relative;
+}
+.congratulations{
+	position: absolute;
+	right: -400px;
+	top:40%;
+	height: 400px;
+	
+	transition: transform 1000ms cubic-bezier(0, 0.47, 0.32, 1.97);
+	
+}
+.endGame:hover .congratulations{
+	transform: translate(-500px,0px);
+}
+
+
