--- a/style/newStyle.css
+++ b/style/newStyle.css
@@ -272,6 +272,7 @@ div ul li a,visited{color:#000;
 	overflow: hidden;
 	position: relative;
 }
+/* end game annimations*/
 .congratulations{
 	position: absolute;
 	right: -400px;
@@ -281,8 +282,43 @@ div ul li a,visited{color:#000;
 	transition: transform 1000ms cubic-bezier(0, 0.47, 0.32, 1.97);
 	
 }
+.Dimond{
+	position: absolute;
+	top:62%;
+	right:50%;
+	height:60px;
+
+}
+.Dimond2{
+	position: absolute;
+	top:60%;
+	right:55%;
+	height:60px;
+
+}
+#greenDimond{
+	transition: transform 8000ms ease-in-out;
+}
+#blueDimond{
+	transition: transform 10000ms ease-in-out;
+}
+#redDimond{
+	transition: transform 12000ms ease-in-out;
+}
+
+.endGame:hover #greenDimond{
+	transform: translate(-1000px, -4000px) rotate(180deg) rotateX(180deg) scale(1,2);
+}
+.endGame:hover #blueDimond{
+	transform: translate(-5000px, 4000px) rotate(360deg) scale(1,2);
+}
+.endGame:hover #redDimond{
+	transform: translate(5000px, 3000px) rotate(420deg) scale(1,2);
+}
+
 .endGame:hover .congratulations{
 	transform: translate(-500px,0px);
 }
+
 
 
