--- a/style/newStyle.css
+++ b/style/newStyle.css
@@ -8,6 +8,7 @@ html{
 	background-size: cover;
 	background-repeat: no-repeat;
 }
+
 p{
 	color: #202020;
 	font-family: 'Della Respira', cursive;
@@ -28,7 +29,7 @@ a{
 	font-weight: bold;
 	font-size: 20pt;
 }
-inputbox{
+.inputbox{
 	width:560px;
 	height:auto;
 }
@@ -43,7 +44,7 @@ inputbox{
 .container {
     width: 40%;
     padding-left: 5%;
-    float:left;
+    margin: auto;
   
 }
 
@@ -278,53 +279,5 @@ div ul li a,visited{color:#000;
 	overflow: hidden;
 	position: relative;
 }
-/* end game annimations*/
-.congratulations{
-	position: absolute;
-	right: -400px;
-	top:40%;
-	height: 400px;
-	
-	transition: transform 1000ms cubic-bezier(0, 0.47, 0.32, 1.97);
-	
-}
-.Dimond{
-	position: absolute;
-	top:62%;
-	right:50%;
-	height:60px;
-
-}
-.Dimond2{
-	position: absolute;
-	top:60%;
-	right:55%;
-	height:60px;
-
-}
-#greenDimond{
-	transition: transform 8000ms ease-in-out;
-}
-#blueDimond{
-	transition: transform 10000ms ease-in-out;
-}
-#redDimond{
-	transition: transform 12000ms ease-in-out;
-}
-
-.endGame:hover #greenDimond{
-	transform: translate(-1000px, -4000px) rotate(180deg) rotateX(180deg) scale(1,2);
-}
-.endGame:hover #blueDimond{
-	transform: translate(-5000px, 4000px) rotate(360deg) scale(1,2);
-}
-.endGame:hover #redDimond{
-	transform: translate(5000px, 3000px) rotate(420deg) scale(1,2);
-}
-
-.endGame:hover .congratulations{
-	transform: translate(-500px,0px);
-}
-
 
 
