--- a/style/animation.css
+++ b/style/animation.css
@@ -104,3 +104,39 @@
 	right:42%;
 	height:70px;
 }
+#treasure0{
+	transition: transform 3000ms ease-in-out
+}
+#treasure1{
+	transition: transform 3000ms ease-in-out
+}
+#treasure2{
+	transition: transform 3000ms ease-in-out
+}
+#treasure3{
+	transition: transform 3000ms ease-in-out
+}
+#treasure4{
+	transition: transform 3000ms ease-in-out
+}
+#treasure5{
+	transition: transform 3000ms ease-in-out
+}
+.endGame:hover #treasure0{
+	transform: translate(500px, -600px) rotate(360deg) scale(1,4);
+}
+.endGame:hover #treasure1{
+	transform: translate(-900px, 900px) rotate(180deg) scale(1,3);
+}
+.endGame:hover #treasure2{
+	transform: translate(600px, 800px) rotate(60deg) scale(1,2);
+}
+.endGame:hover #treasure3{
+	transform: translate(-1000px, -500px) rotate(180deg) scale(1,3);
+}
+.endGame:hover #treasure4{
+	transform: translate(-600px, 900px) rotate(60deg) scale(1,2);
+}
+.endGame:hover #treasure5{
+	transform: translate(700px, -800px) rotate(360deg) scale(1,4);
+}
