--- a/style/newStyle.css
+++ b/style/newStyle.css
@@ -266,3 +266,18 @@ div ul li a,visited{color:#000;
 	transform: translate(0px, 220px) rotate(180deg);
 }
 
+#chest{
+	display: block;
+	margin: auto;
+	position: relative;
+	display: center;
+}
+.leaderboard1{
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+	font-family: 'Pompiere', cursive;
+	font-size: 30pt;
+	font-weight: bold;
+}
+
